--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "devDependencies": {
     "@tauri-apps/cli": "1.0.4",
     "@vitejs/plugin-vue": "3.0.0",
+    "semantic-release": "^19.0.3",
     "vite": "3.0.0"
+  },
+  "release" : {
+    "branches": ["main"]
   }
 }
