--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
         run: npx semantic-release
 
   build-tauri:
-    needs: create-release
+    needs: release
     strategy:
       fail-fast: false
       matrix:
