--- a/package.json
+++ b/package.json
@@ -20,6 +20,18 @@
     "vite": "3.0.0"
   },
   "release" : {
-    "branches": ["main"]
+    "branches": ["main"],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/npm",
+      "@semantic-release/github",
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "echo ::set-output name=release_id::${release[0].id}"
+        }
+      ]
+    ]
   }
 }
