--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "vue": "3.2.37"
   },
   "devDependencies": {
+    "@semantic-release/exec": "^6.0.3",
     "@tauri-apps/cli": "1.0.4",
     "@vitejs/plugin-vue": "3.0.0",
     "semantic-release": "19.0.3",
     "vite": "3.0.0"
   },
-  "release" : {
-    "branches": ["main"],
+  "release": {
+    "branches": [
+      "main"
+    ],
     "plugins": [
       "@semantic-release/commit-analyzer",
       "@semantic-release/release-notes-generator",
