--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,9 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    outputs:
+      version:  ${{ steps.get-release.semantic-release.version }}
+      release_id: ${{ steps.get-release.outputs.result }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -19,10 +22,23 @@ jobs:
       - name: Install dependencies
         run: yarn
       - name: Release
+        id: semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
+        # I couldn't figure out how to get release id from semantic-release, so just read
+      - name: Get Release
+        id: get-release
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { data } = await github.rest.repos.getReleaseByTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: v${{ steps.get-release.semantic-release.version }}
+            })
+            return data.id
 
   build-tauri:
     needs: release
