fix(ci): read correct variable for version

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
       [
         "@semantic-release/exec",
         {
-          "publishCmd": "echo ::set-output name=release_id::${release[0].id}"
+          "publishCmd": "echo ::set-output name=version::${nextRelease.version}"
         }
       ]
     ]
