fix(ci): trying harder to get release version into release id

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,12 +31,14 @@ jobs:
       - name: Get Release
         id: get-release
         uses: actions/github-script@v6
+        env:
+          release_id: ${{ steps.get-release.outputs.version }}
         with:
           script: |
             const { data } = await github.rest.repos.getReleaseByTag({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag: v${{ steps.get-release.outputs.version }}
+              tag: "v" + process.env.release_id
             })
             return data.id
 
