--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,8 +8,8 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     outputs:
-      version:  ${{ steps.get-release.outputs.version }}
-      release_id: ${{ steps.semantic-release.outputs.result }}
+      version:  ${{ steps.semantic-release.outputs.version }}
+      release_id: ${{ steps.get-release.outputs.result }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -32,13 +32,13 @@ jobs:
         id: get-release
         uses: actions/github-script@v6
         env:
-          release_id: ${{ steps.semantic-release.outputs.version }}
+          version: ${{ steps.semantic-release.outputs.version }}
         with:
           script: |
             const { data } = await github.rest.repos.getReleaseByTag({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag: "v" + process.env.release_id
+              tag: "v" + process.env.version
             })
             return data.id
 
