--- a/.github/workflows/test-on-pr.yaml
+++ b/.github/workflows/test-on-pr.yaml
@@ -15,6 +15,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: 16
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
     - name: install Rust stable
       uses: actions-rs/toolchain@v1
       with:
