fix(ci): using repo-token with protoc installer to get around api limit

--- a/.github/workflows/test-on-pr.yaml
+++ b/.github/workflows/test-on-pr.yaml
@@ -17,6 +17,8 @@ jobs:
         node-version: 16
     - name: Install Protoc
       uses: arduino/setup-protoc@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
     - name: install Rust stable
       uses: actions-rs/toolchain@v1
       with:
