--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,6 +9,11 @@ default-run = "app"
 edition = "2021"
 rust-version = "1.57"
 
+[[bin]]
+name = "server"
+test = false
+bench = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
