fix(build): adding a main app back in
I think this is required to make bundling work

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -9,6 +9,11 @@ default-run = "app"
 edition = "2021"
 rust-version = "1.57"
 
+# required to make bundleing work
+[[bin]]
+name = "app"
+path = "src/main.rs"
+
 [[bin]]
 name = "server"
 test = false
@@ -43,7 +48,7 @@ default = [ "custom-protocol" ]
 custom-protocol = [ "tauri/custom-protocol" ]
 
 [profile.release]
-panic = "abort" # Strip expensive panic clean-up logic
+#panic = "abort" # Strip expensive panic clean-up logic
 #codegen-units = 1 # Compile crates one after another so the compiler can optimize better
 #lto = true # Enables link to optimizations
-opt-level = "s" # Optimize for binary size
+#opt-level = "s" # Optimize for binary size
