--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,7 @@ serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1.1", features = ["api-all", "updater"] }
 tokio = { version = "1.21.2", features = ["time", "macros"] }
 libp2p = { version = "0.48.0", features = ["tcp-tokio", "dns-tokio"] }
+base64 = "0.13.0"
 
 [features]
 # by default Tauri runs in production mode
