--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -37,6 +37,9 @@ tokio = { version = "1.21.2", features = ["time", "macros"] }
 libp2p = { version = "0.48.0", features = ["tcp-tokio", "dns-tokio"] }
 base64 = "0.13.0"
 
+[patch.crates-io]
+winrt-notification = { git = "https://github.com/hef/winrt-notification", rev="ea08c23590a9012406b7f9d55b0c37ce275ccb3b" }
+
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
