fix(build): making server more debugable

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -50,7 +50,9 @@ default = [ "custom-protocol" ]
 custom-protocol = [ "tauri/custom-protocol" ]
 
 [profile.release]
-panic = "abort" # Strip expensive panic clean-up logic
+#panic = "abort" # Strip expensive panic clean-up logic
+panic = "unwind"
+debug = true
 codegen-units = 1 # Compile crates one after another so the compiler can optimize better
 lto = true # Enables link to optimizations
 opt-level = "s" # Optimize for binary size
