fix(ci): use target aware tauri-action

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -105,7 +105,7 @@ jobs:
         file: src-tauri/tauri.conf.json
         field: package.version
         value: ${{ needs.release.outputs.version }}
-    - uses: tauri-apps/tauri-action@v0
+    - uses: FabianLars/tauri-action@artifacts-path # change back to #    - uses: tauri-apps/tauri-action@v0 once https://github.com/tauri-apps/tauri-action/pull/301 is merged
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
