--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,12 +53,12 @@ jobs:
             target: aarch64-apple-darwin
           - platform: macos-latest
             target: x86_64-apple-darwin
-          - platform: ubuntu-latest
-            target: aarch64-unknown-linux-gnu
+          #- platform: ubuntu-latest
+          #  target: aarch64-unknown-linux-gnu
           - platform: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-          - platform: windows-latest
-            target: aarch64-pc-windows-msvc
+          #- platform: windows-latest
+          #  target: aarch64-pc-windows-msvc
           - platform: windows-latest
             target: x86_64-pc-windows-msvc
     runs-on: ${{ matrix.platform }}
