fix(ci): abondoning aarch64 builds for now

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,8 +49,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - platform: macos-latest
-            target: aarch64-apple-darwin
+          #- platform: macos-latest
+          #  target: aarch64-apple-darwin
           - platform: macos-latest
             target: x86_64-apple-darwin
           #- platform: ubuntu-latest
