fix(ci): delay server build until releases are done

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -114,7 +114,7 @@ jobs:
         args: --target ${{ matrix.target }}
 
   build-server:
-    needs: release
+    needs: [release, build-tauri]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
