--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,6 +24,11 @@ name = "generate-key"
 test = false
 bench = false
 
+[[bin]]
+name = "update"
+test = false
+bench = false
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
@@ -37,6 +42,8 @@ tokio = { version = "1.21.2", features = ["time", "macros"] }
 libp2p = { version = "0.48.0", features = ["tcp-tokio", "dns-tokio"] }
 base64 = "0.13.0"
 env_logger = "0.9.1"
+reqwest = { version = "0.11.12", features = ["json"] }
+regex = "1.6.0"
 
 [patch.crates-io]
 winrt-notification = { git = "https://github.com/hef/winrt-notification", rev="ea08c23590a9012406b7f9d55b0c37ce275ccb3b" }
