--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -152,6 +152,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - run: mkdir -p _site
       - name: install Rust stable
         uses: actions-rs/toolchain@v1
         with:
