--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -61,5 +61,5 @@ custom-protocol = [ "tauri/custom-protocol" ]
 panic = "unwind"
 debug = true
 codegen-units = 1 # Compile crates one after another so the compiler can optimize better
-lto = true # Enables link to optimizations
+lto = "thin" # Enables link to optimizations
 opt-level = "s" # Optimize for binary size
