--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -112,7 +112,7 @@ jobs:
         args: --target ${{ matrix.target }}
 
   build-server:
-    needs: [release, build-tauri]
+    needs: [release]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -141,7 +141,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: [build-tauri, build-server]
+    needs: [build-tauri]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
