--- a/.github/workflows/test-on-pr.yaml
+++ b/.github/workflows/test-on-pr.yaml
@@ -14,11 +14,15 @@ jobs:
     - name: setup node
       uses: actions/setup-node@v3
       with:
-        node-version: 16
+        node-version: 'lts/*'
+        cache: 'npm'
     - name: Install Protoc
       uses: arduino/setup-protoc@v1
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
+    - uses: Swatinem/rust-cache@v2
+      with:
+        workspaces: src-tauri
     - name: install Rust stable
       uses: actions-rs/toolchain@v1
       with:
