fix(ci): generate update.json for realz

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -160,15 +160,12 @@ jobs:
         with:
           toolchain: stable
       - name: Generate update.json
-        uses: actions-rs/cargo@v1
-        with:
-          cargo: run --bin update > _site/update.json
+        run: cargo run --bin update > _site/update.json
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          # Upload entire repository
           path: '_site/'
       - name: Deploy to GitHub Pages
         id: deployment
