--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -161,6 +161,7 @@ jobs:
           toolchain: stable
       - name: Generate update.json
         run: cargo run --bin update > _site/update.json
+        working-directory: src-tauri
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
