fix(ci): run cargo in correct directory for generating update.json

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -160,7 +160,7 @@ jobs:
         with:
           toolchain: stable
       - name: Generate update.json
-        run: cargo run --bin update > _site/update.json
+        run: cargo run --bin update > ../_site/update.json
         working-directory: src-tauri
       - name: Setup Pages
         uses: actions/configure-pages@v2
