--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,14 +26,16 @@ tauri-build = { version = "1.1.1", features = [] }
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.1.1", features = ["api-all", "updater"] }
+tauri = { version = "1.1.1", features = ["updater"] }
 tokio = { version = "1.21.2", features = ["time", "macros"] }
 libp2p = { version = "0.49.0", features = ["dns", "gossipsub", "identify", "kad", "ping", "tcp", "tokio",
-                                           "mplex", "noise", "websocket", "yamux" ] }
+                                           "mplex", "yamux", "noise" ] } # "noise", "websocket",
+
 base64 = "0.13.1"
 env_logger = "0.9.1"
 reqwest = { version = "0.11.12", features = ["json"] }
 regex = "1.6.0"
+mimalloc = "0.1.30"
 
 [features]
 # by default Tauri runs in production mode
