--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,8 +28,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.1.1", features = ["updater"] }
 tokio = { version = "1.21.2", features = ["time", "macros"] }
-libp2p = { version = "0.49.0", features = ["dns", "gossipsub", "identify", "kad", "ping", "tcp", "tokio",
-                                           "mplex", "yamux", "noise" ] } # "noise", "websocket",
+libp2p = { version = "0.49.0", features = ["dns", "gossipsub", "identify", "kad", "noise", "ping", "relay", "tcp", "tokio", "mplex", "yamux" ] } 
 
 base64 = "0.13.1"
 env_logger = "0.9.1"
