--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@quasar/extras": "^1.15.5",
     "@tauri-apps/api": "1.1.0",
-    "vue": "3.2.41"
+    "pinia": "^2.0.23",
+    "quasar": "^2.10.1",
+    "vue": "3.2.41",
+    "vue-router": "4"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.2.3",
     "@semantic-release/exec": "6.0.3",
     "@tauri-apps/cli": "1.1.1",
     "@vitejs/plugin-vue": "3.1.2",
+    "sass": "1.32.12",
     "semantic-release": "19.0.5",
     "vite": "3.1.8"
   },
