--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,6 +31,7 @@ env_logger = "0.9.1"
 reqwest = { version = "0.11.12", features = ["json"] }
 regex = "1.6.0"
 mimalloc = "0.1.30"
+clap = { version = "4.0.22", features = ["derive", "env", "unicode"] }
 
 [features]
 # by default Tauri runs in production mode
